--- a/src/components/AboutTheTheme.astro
+++ b/src/components/AboutTheTheme.astro
@@ -3,50 +3,24 @@
 
 <div>
   <p>
-    Here are a few reasons why you will love this template:
+    What can you find here?
   </p>
   <ul class="mt-5">
     <li>
-      <strong>Bubblegum.</strong>
-      A colorful <a href="https://astro.build" target="_blank">Astro</a> theme built with <a href="https://tailwindcss.com">Tailwind</a>.
+      <strong>My Blogs</strong>
+      My Programming journey <a href="./blog" target="_blank">Blogs</a> </a>.
     </li>
     <li>
-      <strong>Fast.</strong>
-      Fast by default. Blogster templates are engineered to be performant 
-      and load before you could blink, even when not cached.
+      <strong>My Projects</strong>
+      All my projects
     </li>
     <li>
-      <strong>Dark mode.</strong> Auto dark mode with a manual toggle. Hit that
-      toggle button at the top of the page and see the mode change.
+      <strong>My Setup</strong>
+      My Desktop setup + distro + configs + extensions
     </li>
     <li>
-      <strong>Mobile first.</strong> Responsive and loads fast in all devices.
-    </li>
-    <li>
-      <strong>Accessible.</strong> A well thought out semantic and accessible
-      content.
-    </li>
-    <li>
-      <strong>Perfect lighthouse score.</strong> 100 across the board.
-    </li>
-    <li>
-      <strong>Content authoring for everyone.</strong> Author content using markdown
-      (<code>.md</code>) from your code editor or directly in GitHub.
-    </li>
-    <li>
-      <span>
-        <strong>Extended markdown</strong> with 
-        <a href="https://markdoc.dev">Markdoc</a>.
-      </span>
-      <span>
-        Type-safe custom components like YouTube embed, Twitter embed (or
-        anything you want really) in your markdown (<code>.md</code>) files.</span
-      >
-    </li>
-    <li>
-      Built-in <strong>RSS feed</strong> for your blog, excellent<strong>
-        SEO</strong
-      > and more.
+      <strong>Everything Else Code</strong>
+      All the other code related stuff
     </li>
   </ul>
 </div>
