minor changes in landing page

--- a/src/components/AboutTheTheme.astro
+++ b/src/components/AboutTheTheme.astro
@@ -8,11 +8,11 @@
   <ul class="mt-5">
     <li>
       <strong>My Blogs</strong>
-      My Programming journey <a href="./blog" target="_blank">Blogs</a> </a>.
+      My Programming journey in <a href="./blog">Blogs</a> </a>.
     </li>
     <li>
       <strong>My Projects</strong>
-      All my projects
+      Github Project Docs
     </li>
     <li>
       <strong>My Setup</strong>
