--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,17 +16,17 @@ import DarkModeToggle from "./DarkModeToggle.astro";
   >
     <a
       class="unset ml-4 rounded-sm transition-[background-size] duration-150 ease-in-out bg-left-bottom bg-[length:0%_55%] hover:bg-[length:100%_55%] bg-no-repeat bg-gradient-to-r from-primary-yellow to-primary-yellow dark:bg-none dark:hover:text-primary-yellow"
-      href="https://github.com/flexdinesh/blogster"
+      href="https://github.com/manu156"
     >
-      <i class="fa-brands fa-github" aria-hidden="true" title="Blogster on GitHub"></i>
+      <i class="fa-brands fa-github" aria-hidden="true" title="manu156"></i>
       <span>GitHub</span>
     </a>
     <a
       class="unset ml-4 rounded-sm transition-[background-size] duration-150 bg-left-bottom bg-[length:0%_55%] hover:bg-[length:100%_55%] bg-no-repeat bg-gradient-to-r from-primary-blue to-primary-blue dark:bg-none dark:hover:text-primary-blue"
-      href="https://twitter.com/flexdinesh"
+      href="https://www.linkedin.com/in/manu156/"
     >
-      <i class="fa-brands fa-twitter" aria-hidden="true" title="Dinesh on Twitter"></i>
-      <span>Twitter</span>
+      <i class="fa-brands fa-linkedin" aria-hidden="true" title="manu"></i>
+      <span>Linkedin</span>
     </a>
   </div>
   <DarkModeToggle />
