--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -12,17 +12,20 @@
             from-primary-blue to-primary-blue dark:from-primary-blue dark:to-primary-blue
         "
       >
-        My Blogs
+        Manu ツ
       </span>
     </h1>
     <!-- <p class="text-2xl pb-4">Web Developer. OSS Wizard. Blogger.</p> -->
   </div>
   <div>
     <p class="mb-5">
-      Hi There! Let's explore my magic code and blogs for them :)
+      Hi There! I'm Manu Ekkati. This is the place where you can explore my magic code and blogs for them &#128513;<br><br>
+
+      Backend Software Engineer with a diverse expertise in Java(Spring/Springboot), Go, Python(Numpy, Pandas,.), C, javascript(Node.js/Express.js),
+       and a wide range of cutting-edge technologies, including MySQL, Elasticsearch, Kafka.. <br><br>
+
+      
     </p>
-    <p class="text-center whitespace-nowrap overflow-auto">
-      <code class="py-1 px-2">npx create-blogster@latest --theme bubblegum</code>
-    </p>
+    
   </div>
 </section>
