--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,6 +9,7 @@ import HeaderLink from "./HeaderLink.astro";
         <li><HeaderLink href="/">Home</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
         <li><HeaderLink href="/projects">Projects</HeaderLink></li>
+        <li><HeaderLink href="/about-me">About Me</HeaderLink></li>
       </ul>
     </section>
   </nav>
