--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -21,8 +21,9 @@
     <p class="mb-5">
       Hi There! I'm Manu Ekkati. This is the place where you can explore my magic code and blogs for them &#128513;<br><br>
 
-      Backend Software Engineer with a diverse expertise in Java(Spring/Springboot), Go, Python(Numpy, Pandas,.), C, javascript(Node.js/Express.js),
-       and a wide range of cutting-edge technologies, including MySQL, Elasticsearch, Kafka.. <br><br>
+      Backend Software Engineer with a diverse expertise in a wide range of cutting-edge technologies.<br>
+Finally it would be disrespectful not to mention my opnions like 
+[Fuck-you-nvidia](https://drewdevault.com/2017/10/26/Fuck-you-nvidia.html) so expect it in my blogs<br><br>
 
       
     </p>
