--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -23,7 +23,7 @@
 
       Backend Software Engineer with a diverse expertise in a wide range of cutting-edge technologies.<br>
 Finally it would be disrespectful not to mention my opnions like 
-[Fuck-you-nvidia](https://drewdevault.com/2017/10/26/Fuck-you-nvidia.html) so expect it in my blogs<br><br>
+<a href="https://drewdevault.com/2017/10/26/Fuck-you-nvidia.html">Fuck you nvidia</a> so expect it in my blogs<br><br>
 
       
     </p>
