--- a/src/components/AboutMeMain.astro
+++ b/src/components/AboutMeMain.astro
@@ -19,15 +19,10 @@
   </div>
   <div>
     <p class="mb-5">
-      Hi There! I'm Manu Ekkati. This is the place where you can explore my magic code and blogs for them &#128513;<br><br>
+      Hi There! I'm Manu. This is the place where you can explore my magic code and blogs for them &#128513;<br><br>
 
-      Highly skilled and motivated Backend Software Engineer with a diverse expertise in Java(Spring/Springboot), Go, Python(Numpy, Pandas,.), C, javascript(Node.js/Express.js),
+      Backend Software Engineer with a diverse expertise in Java(Spring/Springboot), Go, Python(Numpy, Pandas,.), C, javascript(Node.js/Express.js),
        and a wide range of cutting-edge technologies, including MySQL, Elasticsearch, Kafka.. <br><br>
-
-      Adept at designing and developing scalable, modular, extensible, and maintainable systems.
-      Passionate about crafting efficient and innovative solutions to complex technical challenges.
-      Continuously staying up-to-date with emerging trends and technologies in the development landscape esp. AI (that's how I generated this intro &#128526;, nah just kidding &#128541;).
-      Enough Buzz words I guess.<br><br>
 
       Interested in learning, exploring and building new things. Always tried to do things perfectly and over-engineer and in the journey learnt to find perfection in imperfection; It's always a trade-off between speed and accuracy, something like Heisenberg uncertainty principle ;)
        <br><br>Free Time:
