--- a/src/components/AboutMeMain.astro
+++ b/src/components/AboutMeMain.astro
@@ -22,8 +22,9 @@
       Hi There! I'm Manu. This is the place where you can explore my magic code and blogs for them &#128513;<br><br>
 
       Backend Software Engineer with a diverse expertise in Java(Spring/Springboot), Go, Python(Numpy, Pandas,.), C, javascript(Node.js/Express.js),
-       and a wide range of cutting-edge technologies, including MySQL, Elasticsearch, Kafka.. <br><br>
-
+       and a wide range of cutting-edge technologies, including MySQL, Elasticsearch, Kafka.. <br>
+    Finally it would be disrespectful not to mention my opnions like 
+<a href="https://drewdevault.com/2017/10/26/Fuck-you-nvidia.html">Fuck you nvidia</a> so expect it in my blogs<br>
       Interested in learning, exploring and building new things. Always tried to do things perfectly and over-engineer and in the journey learnt to find perfection in imperfection; It's always a trade-off between speed and accuracy, something like Heisenberg uncertainty principle ;)
        <br><br>Free Time:
       Playing sports, watching anime, or if i feel like doing productive work then writing some read-only code that no one understands :)
